se actualizan datos del script que controla el login y el registro del usuario

--- a/login.html
+++ b/login.html
@@ -11,10 +11,13 @@
     <section class="registro">
          <h4>Login</h4>
         <form>
-             <input class="campo" type="text" name="nombre" id="name" placeholder="Name">
-             <input class="campo" type="password" name="nombre" id="Password" placeholder="Password">
-             <input id="bton-enviar" class="boton" type="submit" value="enviar">
+             <input class="campo" type="email" name="nombre" id="correoLogin" placeholder="Name">
+             <input class="campo" type="password" name="nombre" id="passwordLogin" placeholder="Password">
+             <input id="bton-enviar-login" class="boton" type="submit" value="enviar">
         </form>
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
