--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
             <h4>Regístrese</h4>
             <form>
                  <input class="campo" type="text" name="nombre" id="name" placeholder="Name">
-                 <input class="campo" type="text" name="nombre" id="Surname" placeholder="Surname">
-                 <input class="campo" type="number" name="Document" id="Document" placeholder="Document">
-                 <input class="campo" type="text" name="address" id="Address" placeholder="Address">
+                 <input class="campo" type="text" name="nombreUser" id="surname" placeholder="Surname">
+                 <input class="campo" type="number" name="Document" id="document" placeholder="Document">
+                 <input class="campo" type="text" name="address" id="address" placeholder="Address">
                  <input class="campo" type="email" name="email" id="email" placeholder="Email">
-                 <input class="campo" type="password" name="nombre" id="Password" placeholder="Password">
+                 <input class="campo" type="password" name="nombre" id="password" placeholder="Password">
                  <input class="campo" type="number" name="nombre" id="phone" placeholder="Phone">
                  <input id="bton-enviar" class="boton" type="submit" value="Registrar">
             </form>
         </section>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="./js/main.js"></script>
 </body>
 </html>
