--- a/home.html
+++ b/home.html
@@ -1,1 +1,16 @@
-home.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Home</title>
+</head>
+<body>
+    <div class="container">
+        <br>
+        <h1 style="text-align: center;">Pagina del home.html</h1>
+    </div>
+</body>
+</html>
