--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Login</title>
-    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <section class="registro">
@@ -16,7 +16,6 @@
              <input id="bton-enviar-login" class="boton" type="submit" value="enviar">
         </form>
     </section>
-
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
